--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@citrus327/my-ts-lib",
+  "name": "@citrus327/match",
   "version": "0.0.0",
   "description": "My awesome typescript library",
   "publishConfig": {
