feat: first version

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
     "vitest": "^1.1.2"
+  },
+  "dependencies": {
+    "@citrus327/array-partition": "1.0.0"
   }
 }
